Fixing activation email font Damion, Fix Home page layout windows on IE and FF in windows and Ubuntu, Adding citysom icon for activation email

--- a/citysom/media/css/style.css
+++ b/citysom/media/css/style.css
@@ -457,7 +457,7 @@ body
         width: -webkit-min-content;
         width: auto;*/
         height: 250px;
-        width: 260px;    
+        width: 256px;    
         margin-bottom: 15px;
         margin-right:15px;
         text-overflow:ellipsis;
